# platform.upstream.gsignond-plugin-sasl

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
docs/: Makefile.am  Makefile.in  gsignond-plugin-sasl-docs.sgml  gsignond-plugin-sasl-sections.txt  gsignond-plugin-sasl.types
docs/html/: GSignondSaslPlugin.html  api-index-full.html  ch01.html  deprecated-api-index.html  gsignond-plugin-sasl.devhelp2  index.html  index.sgml  object-tree.html
examples/: Makefile.am  Makefile.in  gsignond-sasl-example.c
packaging/: gsignond-plugin-sasl.changes  gsignond-plugin-sasl.spec
src/: Makefile.am  Makefile.in  gsignond-sasl-plugin.c  gsignond-sasl-plugin.h
test/: Makefile.am  Makefile.in  saslplugintest.c  valgrind.supp
